# boneTissueEngineering

./: .gitignore  README.md
parser/shapeDesignBones/: BonesAffinePeriodic2D.ini  BonesAffinePeriodic3D.ini  vtkPlotInterfaceCell.ini
src/: CMakeLists.txt
src/modules/Energies/: derivativeTest.h  energyDefines.h
src/modules/Solver/: LinearSystemSolver.h
src/modules/aol/: general.h  loadAndSave.h  tensor.h  tikzPlotter.h
src/modules/finiteElements/quocElements/: quocAffineSymGradIntegrator.h  quocBasefunctionSets.h  quocConfigurators.h  quocDefines.h  quocDiscreteFunction.h  quocHandler.h  quocIntegrator.h  quocMesh.h  quocQuadrature.h
src/modules/materialOptimization/: materialOptimizationDefines.h  multipleLoad.h
src/modules/solver/: LineSearchMethods.h  LinearSystemSolver.h  SolverInfo.h  linearSolver.h
src/projects/elasticBodies/: quocMaterialOptimizationDefines.h
src/projects/elasticBodies/PeriodicHomogenizationBones/: BashBonesCompareDesigns.cpp  BashBonesMatOpt.cpp  BonesEnergiesWithMaterial.h  BonesInterface.h  BonesLinElastEnergies.h  BonesMatOpt2D.cpp  BonesMatOpt3D.cpp  BonesMatOptCompliance.h  BonesMatOptDefines.h  BonesMatOptEnergies.h  BonesMatOptSolver.h  BonesOptDeform.cpp  BonesOptDeformSolver.h  BonesPlotResults.cpp  BonesPlotter.h  BonesResultsPlotter.h  CMakeLists.txt
src/projects/elasticBodies/elastDeformLinElast/: CMakeLists.txt  quocForces.h  quocLinElastEnergy.h  quocOptimalDeformLinElast.cpp  quocOptimalDeformSolverLinElast.h
src/projects/elasticBodies/materialOptLinElast/: CMakeLists.txt  quocEnergiesWithMaterial.h  quocMaterialOptimizationComplianceEnergies.h  quocMaterialOptimizationEnergies.h  quocMaterialOptimizationLinElast.cpp  quocMaterialOptimizationSolver.h
src/util/: cmakeParseError.sh
